# Copyright 2022-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR GPL-3.0-or-later

option('lint', type: 'boolean', value: false, yield: true,
       description: 'Run code quality checks')

option('tests', type: 'feature', yield: true,
       description: 'Build tests')

option('title', type: 'string', value: 'Raul',
       description: 'Project title')
